# mlir-cf-pass

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: formatting-test.yml  lit-test.yml
cf-opt/: CMakeLists.txt  cf-opt.cpp
include/: CMakeLists.txt  PassDetail.h  Passes.h  Passes.td
lib/: CFIndexToI64.cpp  CFIndexToInt.cpp  CMakeLists.txt
test/: CMakeLists.txt  br.mlir  br_multi_arg.mlir  br_multi_block.mlir  br_multi_using_arg.mlir  br_using_arg.mlir  cf-opt.mlir  lit.cfg.py  lit.site.cfg.py.in  mix.mlir
